--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,5 @@ JWT_REFRESH_EXPIRY=7d
 
 # Bcrypt
 BCRYPT_SALT_ROUNDS=12
+
+mongodb+srv://jaiprakashsahu058_db_user:05122005@cluster0.naffsap.mongodb.net/?appName=Cluster0
